// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageItem when content is defined matches snapshot 1`] = `
<tr>
  <td
    style={
      Object {
        "width": 200,
      }
    }
  >
    mocked date
  </td>
  <td
    style={
      Object {
        "width": 150,
      }
    }
  >
    2
  </td>
  <td
    style={
      Object {
        "width": 100,
      }
    }
  >
    1
  </td>
  <td
    style={
      Object {
        "wordBreak": "break-word",
      }
    }
  >
    <JSONTree
      collectionLimit={50}
      data={
        Object {
          "foo": "bar",
          "key": "val",
        }
      }
      getItemString={[Function]}
      hideRoot={true}
      invertTheme={false}
      isCustomNode={[Function]}
      keyPath={
        Array [
          "root",
        ]
      }
      labelRenderer={[Function]}
      postprocessValue={[Function]}
      shouldExpandNode={[Function]}
      theme={
        Object {
          "base0B": "#363636",
          "base0D": "#3273dc",
          "tree": [Function],
          "value": [Function],
        }
      }
      valueRenderer={[Function]}
    />
  </td>
</tr>
`;

exports[`MessageItem when content is undefined matches snapshot 1`] = `
<tr>
  <td
    style={
      Object {
        "width": 200,
      }
    }
  >
    mocked date
  </td>
  <td
    style={
      Object {
        "width": 150,
      }
    }
  >
    20
  </td>
  <td
    style={
      Object {
        "width": 100,
      }
    }
  >
    2
  </td>
  <td
    style={
      Object {
        "wordBreak": "break-word",
      }
    }
  />
</tr>
`;
